re PR tree-optimization/44897 (-flto + ipa-sra misoptimize sqlite (non-plugin only))

PR tree-optimization/44897 
	* ipa-inline.c (cgraph_decide_recursive_inlining): Do not divide
	by zero for insane profiles.

From-SVN: r174183